--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /win32/config.h
 /man/
 
-/aclocal.m4
+#/aclocal.m4
 /autom4te.cache/
 /compile
 /config.guess
@@ -12,7 +12,7 @@
 /config.log
 /config.status
 /config.sub
-/configure
+#/configure
 /depcomp
 /install-sh
 /libtool
