--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ compiler:
   - gcc
   - clang
 # Change this to your needs
-script: sh autogen.sh && ./configure && make
+script: ./configure && make
