last commit before new branch nuke

--- a/libsofia-sip-ua/msg/Makefile.in
+++ b/libsofia-sip-ua/msg/Makefile.in
@@ -122,7 +122,7 @@ CONFIG_HEADER = $(top_builddir)/config.h \
 CONFIG_CLEAN_FILES = Doxyfile
 CONFIG_CLEAN_VPATH_FILES =
 LIBRARIES = $(noinst_LIBRARIES)
-ARFLAGS = cru
+ARFLAGS = cr
 libtest_msg_a_AR = $(AR) $(ARFLAGS)
 libtest_msg_a_LIBADD =
 am_libtest_msg_a_OBJECTS = test_class.$(OBJEXT) test_table.$(OBJEXT) \
