--- a/s2check/Makefile.in
+++ b/s2check/Makefile.in
@@ -116,7 +116,7 @@ CONFIG_HEADER = $(top_builddir)/config.h \
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 LIBRARIES = $(noinst_LIBRARIES)
-ARFLAGS = cru
+ARFLAGS = cr
 libs2_a_AR = $(AR) $(ARFLAGS)
 libs2_a_LIBADD =
 am_libs2_a_OBJECTS = s2tcase.$(OBJEXT) s2base.$(OBJEXT) \
