--- a/configure.ac
+++ b/configure.ac
@@ -5,13 +5,13 @@ dnl Licensed under LGPL. See file COPYING.
 dnl
 dnl ref: http://www.gnu.org/software/autoconf/manual/autoconf.info.gz
 dnl
-AC_PREREQ([2.57])
+AC_PREREQ(2.57)
 
 dnl information on the package
 dnl ---------------------------
 
 dnl update both the version for AC_INIT and the LIBSOFIA_SIP_UA_MAJOR_MINOR
-AC_INIT([sofia-sip],[1.12.10devel])
+AC_INIT([sofia-sip], [1.12.10devel])
 
 CFLAGS="$CFLAGS $CONFIGURE_CFLAGS"
 CXXFLAGS="$CXXFLAGS $CONFIGURE_CXXFLAGS"
@@ -38,7 +38,7 @@ AM_INIT_AUTOMAKE
 
 AC_CONFIG_HEADERS([config.h])
 
-AC_USE_SYSTEM_EXTENSIONS
+AC_GNU_SOURCE
 
 CFLAGS="$CFLAGS -DSU_DEBUG=0 $DEBUG_CFLAGS"
 ### checks for programs
@@ -52,7 +52,7 @@ AC_PROG_CPP
 AC_CHECK_PROG(ETAGS, etags, etags, echo)
 AC_CHECK_TOOL(AR, ar, ar)
 AC_CHECK_TOOL(LD, ld, ld)
-LT_INIT
+AC_PROG_LIBTOOL
 AM_PROG_CC_C_O
 
 SAC_ENABLE_NDEBUG
@@ -91,13 +91,13 @@ AX_COMPILER_VENDOR
 
 #  Enable 64 bit build
 AC_ARG_ENABLE(64,
-[AS_HELP_STRING([--enable-64],[build with 64 bit support])],[enable_64="$enable_64"],[enable_64="no"])
+[AC_HELP_STRING([--enable-64],[build with 64 bit support])],[enable_64="$enable_64"],[enable_64="no"])
 
 if test "x${ax_cv_c_compiler_vendor}"  =  "xsun" ; then
     if test "${enable_64}" = "yes"; then
         SOFIA_CFLAGS="$SOFIA_CFLAGS -m64"
-	LDFLAGS="-m64 -Wl,-64"
-	export PKG_CONFIG_PATH=/usr/lib/64/pkgconfig
+  LDFLAGS="-m64 -Wl,-64"
+  export PKG_CONFIG_PATH=/usr/lib/64/pkgconfig
     fi
 fi
 
@@ -114,14 +114,15 @@ AC_SUBST(SOFIA_PLAT_CFLAGS, $SOFIA_PLAT_CFLAGS)
 
 ### checks for header files
 ### -----------------------
-AC_CHECK_INCLUDES_DEFAULT
-AC_PROG_EGREP
+AC_HEADER_STDC
 
 ### checks for declarations
 ### -----------------------
 
 ### checks for types
 ### ----------------
+
+AC_TYPE_SIGNAL
 AC_TYPE_LONGLONG
 
 dnl
@@ -223,7 +224,7 @@ AC_C_VAR_FUNC
 AC_C_MACRO_FUNCTION
 AC_C_KEYWORD_STRUCT
 
-AC_CHECK_HEADERS_ONCE([sys/time.h])
+AC_HEADER_TIME
 AC_TYPE_SIZE_T
 
 AC_SYS_SA_LEN
