--- a/configure.ac
+++ b/configure.ac
@@ -5,13 +5,13 @@ dnl Licensed under LGPL. See file COPYING.
 dnl
 dnl ref: http://www.gnu.org/software/autoconf/manual/autoconf.info.gz
 dnl
-AC_PREREQ(2.57)
+AC_PREREQ([2.71])
 
 dnl information on the package
 dnl ---------------------------
 
 dnl update both the version for AC_INIT and the LIBSOFIA_SIP_UA_MAJOR_MINOR
-AC_INIT([sofia-sip], [1.12.10devel])
+AC_INIT([sofia-sip],[1.12.10devel])
 
 CFLAGS="$CFLAGS $CONFIGURE_CFLAGS"
 CXXFLAGS="$CXXFLAGS $CONFIGURE_CXXFLAGS"
@@ -38,8 +38,6 @@ AM_INIT_AUTOMAKE
 
 AC_CONFIG_HEADERS([config.h])
 
-AC_GNU_SOURCE
-
 CFLAGS="$CFLAGS -DSU_DEBUG=0 $DEBUG_CFLAGS"
 ### checks for programs
 ### -------------------
@@ -52,8 +50,7 @@ AC_PROG_CPP
 AC_CHECK_PROG(ETAGS, etags, etags, echo)
 AC_CHECK_TOOL(AR, ar, ar)
 AC_CHECK_TOOL(LD, ld, ld)
-AC_PROG_LIBTOOL
-AM_PROG_CC_C_O
+LT_INIT
 
 SAC_ENABLE_NDEBUG
 SAC_ENABLE_EXPENSIVE_CHECKS
@@ -91,7 +88,7 @@ AX_COMPILER_VENDOR
 
 #  Enable 64 bit build
 AC_ARG_ENABLE(64,
-[AC_HELP_STRING([--enable-64],[build with 64 bit support])],[enable_64="$enable_64"],[enable_64="no"])
+[AS_HELP_STRING([--enable-64],[build with 64 bit support])],[enable_64="$enable_64"],[enable_64="no"])
 
 if test "x${ax_cv_c_compiler_vendor}"  =  "xsun" ; then
     if test "${enable_64}" = "yes"; then
@@ -114,7 +111,7 @@ AC_SUBST(SOFIA_PLAT_CFLAGS, $SOFIA_PLAT_CFLAGS)
 
 ### checks for header files
 ### -----------------------
-AC_HEADER_STDC
+
 
 ### checks for declarations
 ### -----------------------
@@ -122,7 +119,7 @@ AC_HEADER_STDC
 ### checks for types
 ### ----------------
 
-AC_TYPE_SIGNAL
+
 AC_TYPE_LONGLONG
 
 dnl
@@ -224,7 +221,6 @@ AC_C_VAR_FUNC
 AC_C_MACRO_FUNCTION
 AC_C_KEYWORD_STRUCT
 
-AC_HEADER_TIME
 AC_TYPE_SIZE_T
 
 AC_SYS_SA_LEN
